# rust_lambda

./: README.md  cdk.json  package.json
function/: Cargo.toml  build.sh
function/src/: main.rs
lib/: rust-lambda-stack.ts
test/: rust_lambda.test.ts
