[package]
name = "rust_lambda"
version = "0.1.0"
authors = ["Austin Crim <crim.austin@principal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.3.0"
aws_lambda_events = "0.4.0"
log = "0.4.14"
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"]}
simple_logger = "1.11.0"
tokio = {version = "1", features = ["full"]}

[[bin]]
name = "bootstrap"
path = "src/main.rs"